test-results/arity_error.err
[1m/mnt/c/Users/matthew/git/upp/examples/arity_error.c:9:5: error: @transformer expected 2 arguments, but found 1[0m
    @transformer(10) int a;
    [1;31m^[0m
